<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_calorie_backgroundColor"
    tools:context=".CalorieCalculator">

    <EditText
        android:id="@+id/age_ed"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Age(18-80):"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weight_ed"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Enter Weight(kg):"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/height_ed"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Enter Height(cm):"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_ed" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_ed">

        <RadioButton
            android:id="@+id/sed_btn"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:text="@string/sedentary"
            android:textSize="12dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/lightly_btn"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:text="@string/lightly_active"
            android:textSize="12dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/moderately_btn"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:text="@string/moderately_active"
            android:textSize="12dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/very_btn"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:text="@string/very_active"
            android:textSize="12dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/extra_btn"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:text="@string/extra_active"
            android:textSize="12dp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonslyle"
        android:onClick="onClick"
        android:text="Calculate"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <TextView
        android:id="@+id/bmr_result_tx"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:text="BMR result:"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/calculate_btn"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/calorie_result_tx"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="Calorie result:"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmr_result_tx" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_ed">

        <RadioButton
            android:id="@+id/male_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:onClick="onClick"
            android:text="Male" />

        <RadioButton
            android:id="@+id/female_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:onClick="onClick"
            android:text="Female" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonslyle"
        android:text="Save"
        android:textSize="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>